# UAV-Rust

./: .gitignore  Cargo.toml  README.md  memory.x  sample.txt
.cargo/: config.toml
docs/UML/: src.puml
dronecode/: Cargo.toml
dronecode/src/: angular_controller.rs  control.rs  controllers.rs  drone_transmission.rs  filter_plot.rs  kalman.rs  log_storage_manager.rs  main.rs  yaw_pitch_roll.rs
dronecode/src/drone/: drone.rs  height_control.rs  mod.rs  motors.rs
dronecode/src/working_mode/: calibration_mode.rs  full_control_mode.rs  height_control_mode.rs  lift_control_mode.rs  manual_mode.rs  mod.rs  panic_mode.rs  raw_sensor_mode.rs  safe_mode.rs  yaw_control_mode.rs  yawcontrolled_mode.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
runner/: Cargo.toml
runner/database/: 1678264420071898785.json  1678264420572030409.json  1678264421072364527.json  1678264421572629571.json  1678264422072890651.json  1678264422573169011.json  1678264423073486180.json  1678264423573776700.json  1678264424074115160.json  1678264424574364537.json
runner/src/: interface.rs  main.rs
runner/src/interface/: data_transmission.rs  database.rs  gui.rs  interface.rs  joystick_mapper.rs  kalman.rs  keyboard_mapper.rs  keyboard_scan.rs  mod.rs  pc_transmission.rs  plotters_piston.rs  settings_logic.rs
runner/src/protocol/: protocol.rs
simulation/: kalman.ipynb
simulator/: Quadcopter.py  Quadcopter_main.py  yaw_control.ipynb
